--- a/Divvy_Bike_share_data.ipynb
+++ b/Divvy_Bike_share_data.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Divvy Bike share data.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -29,10 +30,20 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Amakudegloria/Divvy-Bike-Share-Analysis-Python/blob/master/Divvy_Bike_share_data.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "pXaEdYrsqNAJ"
       },
       "source": [
-        "# **Introduction**\n",
+        "#**Divvy Bike Share**\n",
         "Over the past decade, bicycle-sharing systems have been growing in number and popularity in cities across the world. Bicycle-sharing systems allow users to rent bicycles for short trips, typically 30 minutes or less. With the latest technologies, it is easy for a user to access a dock within the system and unlock or return bicycles. These technologies also provide a wealth of data that can be used to explore how these bike-sharing systems are used.\n",
         "\n",
         "In this project, I will perform an exploratory analysis on data provided by Divvy, a bike-share system provider for many major cities in the United States. I will compare the system usage between three large cities: New York City, Chicago, and Washington, DC. I will also see if there are any differences within each system for those users that are registered, regular users and those users that are short-term, casual users."
@@ -94,7 +105,7 @@
         "%matplotlib inline\n",
         "from dateutil.relativedelta import relativedelta"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -128,7 +139,7 @@
         "chicago_df.columns = [n.lower().replace(' ', '_') for n in chicago_df.columns]\n",
         "\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -155,7 +166,7 @@
         "\n",
         "# Display first few rows"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -177,7 +188,7 @@
         "washington_df = pd.read_csv('https://github.com/Amakudegloria/US-Bike-Share-Analysis-Python/blob/master/washington.csv?raw=true')\n",
         "washington_df.columns = [n.lower().replace(' ', '_') for n in washington_df.columns]"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -191,7 +202,7 @@
         "\n",
         " "
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -216,7 +227,7 @@
         "#Convert end time to DateTime\n",
         "Bike_share_df['end_time'] = Bike_share_df['end_time'].map(pd.to_datetime)\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -254,7 +265,7 @@
         "common_month_name = Bike_share_df['month_name'].mode()[0]\n",
         "print(\"The most common month is: {}\".format(common_month_name))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -295,7 +306,7 @@
         "\n",
         "print(\"The most common day of the week is: {}\".format(common_day))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -334,7 +345,7 @@
         "common_weekday = Bike_share_df['weekday'].mode()[0]\n",
         "print(\"The most common weekday is: {}\".format(common_weekday))"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -374,7 +385,7 @@
         "common_hour = Bike_share_df['hour'].mode()[0]\n",
         "print(\"The most common hour of the day is: {}\".format(common_hour))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -411,7 +422,7 @@
         "\n",
         "print(\"The most common start station is: {}\".format(common_start_station))"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -448,7 +459,7 @@
         "\n",
         "print(\"The most common end_station is: {}\".format(common_end_station))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,7 +499,7 @@
         "freq_comb_stations = Bike_share_df['combined_stations'].mode()[0]\n",
         "print(\"The most common trip from start to end is: {}\".format(freq_comb_stations))"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -528,7 +539,7 @@
         "total_tt_hour = total_tt_secs/60\n",
         "print(\"The total travel time is: {} hours\".format(total_tt_hour))"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -568,7 +579,7 @@
         "avg_tt_hour = avg_tt_secs/60\n",
         "print(\"The average travel time is: {} hours\".format(avg_tt_hour))"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -613,7 +624,7 @@
         "#What is the total number of Divvy Bike share users \n",
         "Bike_share_df['user_type'].count()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -644,7 +655,7 @@
         "Bike_share_df['user_type'].unique()\n",
         "Bike_share_df['user_type'].value_counts()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -679,7 +690,7 @@
         "#Now we know there are missing values for our types let's count them\n",
         "Bike_share_df['user_type'].isnull().sum()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -728,7 +739,7 @@
         "print(\"There are {} Dependent(s)\".format(type_dependent))\n",
         "print(\"There are {} missing user types in our dataset\".format(missing_user_type))"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -762,7 +773,7 @@
         "\n",
         "NYC_Chicago_df = pd.concat([chicago_df, new_york_city_df])"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -779,7 +790,7 @@
         "\n",
         "NYC_Chicago_df['day'] = NYC_Chicago_df['start_time'].dt.day\n"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -802,7 +813,7 @@
         "#How many? Let's count them.\n",
         "NYC_Chicago_df['gender'].isnull().sum()"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -845,7 +856,7 @@
         "print(\"There are {} Females\".format(Female_cust))\n",
         "print(\"There are {} missing gender\".format(nan_gender))"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -892,7 +903,7 @@
         "Earl_birth_year = NYC_Chicago_df[NYC_Chicago_df['birth_year'] > 0].min()\n",
         "print(\"The earliest birth year is: {}\".format(Earl_birth_year['birth_year']))"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -927,7 +938,7 @@
         "recent_birth_year = NYC_Chicago_df['birth_year'].max()\n",
         "print(\"The most recent birth year is: {}\".format(recent_birth_year))"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -961,7 +972,7 @@
         "common_year = NYC_Chicago_df['birth_year'].mode()[0]\n",
         "print(\"The most common birth year is: {}\".format(common_year))"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1007,7 +1018,7 @@
         "chicago_df['weekday']= chicago_df['start_time'].dt.day_name()\n",
         "\n"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1029,7 +1040,7 @@
         "\n",
         "washington_df['weekday']= washington_df['start_time'].dt.day_name()\n"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1054,7 +1065,7 @@
         "\n",
         "new_york_city_df['weekday']= new_york_city_df['start_time'].dt.day_name()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1127,7 +1138,7 @@
         "\n",
         "get_filters()"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1389,7 +1400,7 @@
         "groupby_gender = chicago_df.groupby('gender').size()\n",
         "groupby_gender.plot(kind='bar', title='Distribution of genders for Chicago', rot=45, color=['red', 'blue']);\n"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1426,7 +1437,7 @@
         "groupby_gender = new_york_city_df.groupby('gender').size()\n",
         "groupby_gender.plot(kind='bar', title='Distribution of genders for NYC', rot=45, color=['red', 'blue'],);"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1459,7 +1470,7 @@
         "groupby_user_chi = washington_df.groupby('user_type').size()\n",
         "groupby_user_chi.plot(kind='bar',title='Distribution of User Types for Washington', rot=45, color= ['red', 'blue']);\n"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1494,7 +1505,7 @@
         "plt.xlabel('Birth Year');\n",
         "plt.ylabel('Count of users');"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1537,7 +1548,7 @@
         "plt.xlabel('Birth Year');\n",
         "plt.ylabel('Count of users');"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1607,7 +1618,7 @@
         "plt.xlabel('Hour');\n",
         "plt.ylabel('number of trips');"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1660,7 +1671,7 @@
         "#Assign this to a new column called 'Age'\n",
         "NYC_Chicago_df['age'] = NYC_Chicago_df.apply(rowToAge, axis=1)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1682,7 +1693,7 @@
         "plt.xlabel('Trip Duration');\n",
         "plt.ylabel('Age');"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
