--- a/Divvy_Bike_share_data.ipynb
+++ b/Divvy_Bike_share_data.ipynb
@@ -86,8 +86,7 @@
         "id": "MXTpjzz-rqM0"
       },
       "source": [
-        "## **Data Wrangling**\n",
-        "Now it's time to collect and explore our data."
+        "# **Import Packages**"
       ]
     },
     {
@@ -123,7 +122,8 @@
         "id": "g8K36woWr75W"
       },
       "source": [
-        "# **Exploratory Data Analysis**\n"
+        "# **Exploratory Data Analysis**\n",
+        "Now it's time to collect and explore our data!!!\n"
       ]
     },
     {
@@ -132,7 +132,7 @@
         "id": "i9kJGOtDnt_m"
       },
       "source": [
-        "# Chicago data"
+        "## **Chicago data**"
       ]
     },
     {
@@ -157,8 +157,9 @@
         "id": "T9t7D6lFnt_1"
       },
       "source": [
-        "# New york city data\n",
-        "We can do the same for the New york city data."
+        "## **New york city data**\n",
+        "\n",
+        "We can do the same for the New york city data 😉."
       ]
     },
     {
@@ -184,7 +185,7 @@
         "id": "tb71cKtAnt_v"
       },
       "source": [
-        "#Washington data\n",
+        "#**Washington data**\n",
         "As we do the same, notice that this dataset has no information on the user's Birth year, so we can ignore this for now."
       ]
     },
@@ -220,7 +221,7 @@
         "id": "LyogiFGPnuAA"
       },
       "source": [
-        "#Converting to DateTime\n",
+        "#**Converting to DateTime**\n",
         "We can convert the dates from strings to a datetime object. Once the dates are converted to a datetime object, we can easily customize the dates and work with data across various timeframes (e.g. daily, monthly, yearly) "
       ]
     },
@@ -485,7 +486,7 @@
         "id": "ZbNO9pAPnuAn"
       },
       "source": [
-        "##** Question 7**\n",
+        "#**Question 7**\n",
         "What is the most frequent trip (i.e., most frequent combination of start station and end station)?\n",
         "\n",
         "**Answer**: The trip from **Lake Shore Dr & Monroe St** to **Streeter Dr & Grand Ave** is the most frequently occuring."
@@ -884,7 +885,7 @@
         "id": "A0vZKdpBnuBI"
       },
       "source": [
-        "#**Question 12 **\n",
+        "#**Question 12**\n",
         "Great! We now know the genders, it would also be important to know the different age distribution of our users. What are their ages?\n",
         "(only available for NYC and Chicago)"
       ]
@@ -1743,17 +1744,6 @@
         "Another suggestion would be to generate more revenue for the company by placing externally sponsored advertisements on their platform (Application, website, etc.) on wednesdays which is the day of the week with the most usage. \n",
         "Lastly, increase promotions for the divvy bikes, targeting their major market segments (**\"The Milllenials\"**)."
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "xVpL9gpX1QTz"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
