--- a/Divvy_Bike_share_data.ipynb
+++ b/Divvy_Bike_share_data.ipynb
@@ -122,8 +122,7 @@
         "id": "g8K36woWr75W"
       },
       "source": [
-        "# **Exploratory Data Analysis**\n",
-        "Now it's time to collect and explore our data!!!\n"
+        "# **Data Wrangling**\n"
       ]
     },
     {
@@ -185,7 +184,7 @@
         "id": "tb71cKtAnt_v"
       },
       "source": [
-        "#**Washington data**\n",
+        "##**Washington data**\n",
         "As we do the same, notice that this dataset has no information on the user's Birth year, so we can ignore this for now."
       ]
     },
@@ -221,7 +220,7 @@
         "id": "LyogiFGPnuAA"
       },
       "source": [
-        "#**Converting to DateTime**\n",
+        "##**Converting to DateTime**\n",
         "We can convert the dates from strings to a datetime object. Once the dates are converted to a datetime object, we can easily customize the dates and work with data across various timeframes (e.g. daily, monthly, yearly) "
       ]
     },
@@ -239,6 +238,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "k7fxcvcvPg0v"
+      },
+      "source": [
+        "# **Data Exploration and Analysis**\n",
+        "Now it's time to collect and explore our data!!!"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -292,7 +301,7 @@
         "id": "i8U0-zzsnuAO"
       },
       "source": [
-        "#**Question 2**\n",
+        "##**Question 2**\n",
         " on which particularly date do we have the most usage of our bikes?\n",
         "\n",
         " **Answer**: The most common day of the week is **21**"
@@ -333,7 +342,7 @@
         "id": "QuGp0chFnuAU"
       },
       "source": [
-        "#**Question 3**\n",
+        "##**Question 3**\n",
         "which days of the week do our users use the bike most?\n",
         "\n",
         "**Answer**: The most common weekday is **Wednesday**"
@@ -372,7 +381,7 @@
         "id": "nLvtyWbAnuAa"
       },
       "source": [
-        "#**Question 4**\n",
+        "##**Question 4**\n",
         "On which hour of the day do we have the most users ?\n",
         "\n",
         "**Answer**: The most common hour of the day is **8am**"
@@ -412,7 +421,7 @@
         "id": "xdSiQbrCnuAg"
       },
       "source": [
-        "#**Question 5**\n",
+        "##**Question 5**\n",
         "What is our most common start station?\n",
         "\n",
         "**Answer**: The most common start station is **Streeter Dr & Grand Ave**"
@@ -449,7 +458,7 @@
         "id": "XykSi3WXnuAh"
       },
       "source": [
-        "#**Question 6**\n",
+        "##**Question 6**\n",
         "What is our most common end station?\n",
         "\n",
         "**Answer**: The most common end station is **Streeter Dr & Grand Ave**"
@@ -486,7 +495,7 @@
         "id": "ZbNO9pAPnuAn"
       },
       "source": [
-        "#**Question 7**\n",
+        "##**Question 7**\n",
         "What is the most frequent trip (i.e., most frequent combination of start station and end station)?\n",
         "\n",
         "**Answer**: The trip from **Lake Shore Dr & Monroe St** to **Streeter Dr & Grand Ave** is the most frequently occuring."
@@ -526,7 +535,7 @@
         "id": "j415q-b4nuAs"
       },
       "source": [
-        "#**Question 8**\n",
+        "##**Question 8**\n",
         "What is the overall travel time so far?\n",
         "\n",
         "**Answer**: The total travel time is **15366017.008066665 hours**"
@@ -566,7 +575,7 @@
         "id": "XLiPakwDnuAv"
       },
       "source": [
-        "#**Question 9**\n",
+        "##**Question 9**\n",
         "What is the  Average travel time so far?\n",
         "\n",
         "**Answer**: **17 hours** is the average travel time "
@@ -606,7 +615,7 @@
         "id": "GnIMf2gYnuAz"
       },
       "source": [
-        "#**Question 10** \n",
+        "##**Question 10** \n",
         "Now that we have gained insights about our users and their travel times. Let's expelore each user types\n",
         "\n",
         "What are the various User Types and their counts?\n",
@@ -769,7 +778,7 @@
         "id": "iGef2zlcnuA-"
       },
       "source": [
-        "# **Question 11**\n",
+        "## **Question 11**\n",
         "Diving deeper we can explore the gender of our various users in order to help develop key strategies and target their individual needs(Data only available for NYC and Chicago)"
       ]
     },
@@ -885,7 +894,7 @@
         "id": "A0vZKdpBnuBI"
       },
       "source": [
-        "#**Question 12**\n",
+        "##**Question 12**\n",
         "Great! We now know the genders, it would also be important to know the different age distribution of our users. What are their ages?\n",
         "(only available for NYC and Chicago)"
       ]
@@ -999,7 +1008,7 @@
         "id": "aoc_hIleQ4f_"
       },
       "source": [
-        "# **Question 13**\n",
+        "## **Question 13**\n",
         "Finally, lets write a script that takes in raw input to create an interactive experience in the terminal and returns the expected output.\n",
         "\n",
         "But first let's prepare the dataset for this."
